--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,3 +37,14 @@ jobs:
       - run:
           name: run tests
           command: bundle exec rspec --format progress
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
